# mid

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
docker/mysql/init/: 01-init.sql
docker/postgres/init/: 01-init.sql
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: mod.rs
src/cli/commands/history/: mod.rs
src/cli/commands/list/: mod.rs
src/cli/commands/query/: json.rs  mod.rs  table.rs
src/cli/commands/remote/: mod.rs
src/cli/commands/status/: mod.rs
src/core/: globals.rs  mod.rs
src/core/config/: manage.rs  mod.rs  types.rs
src/core/config/manage/: mod.rs
src/core/config/new/: create.rs  handler.rs  mod.rs  types.rs
src/core/config/status/: handler.rs
src/core/config/switch/: handler.rs
src/core/databases/adapters/: mod.rs
src/core/databases/adapters/mysql/query/: mod.rs
src/core/databases/adapters/postgres/query/: mod.rs
src/core/databases/application/: mod.rs
src/core/databases/application/query/: mod.rs
src/core/databases/application/tables/: mod.rs
src/core/databases/application/tables/list/: mod.rs
src/core/databases/application/tables/select/: mod.rs
src/core/history/: mod.rs
src/core/query/: mod.rs  table.rs
