[package]
name = "mid"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version =  "0.9.0", features = [ "postgres", "chrono", "uuid", "runtime-tokio" ]}
thiserror = "2.0.18"
tokio = { version =  "1.52.3", features = ["full"] }
toml = "1.1.2"
