[package]
name = "mid"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
rand = "0.10.1"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version =  "0.9.0", features = [ "postgres", "chrono", "uuid", "runtime-tokio" ]}
thiserror = "2.0.18"
tokio = { version =  "1.52.3", features = ["full"] }
toml = "1.1.2"
